# old-school-openko

./: .gitignore  01-OBJETIVO-Y-ALCANCE.md  02-ESTRUCTURA-DE-CARPETAS.md  03-CONTEXTO-OLD-SCHOOL-OPENKO.md  04-PLAN-PORT-SERVIDOR-LINUX.md  05-PROTOCOLO-Y-CIFRADO.md  06-PLAN-ACTUALIZACION-CLIENTE.md  07-BASE-DE-DATOS.md  08-ANTICHEAT.md  09-METODOLOGIA-Y-CONVENCIONES.md  All.slnx  CMakeLists.txt  CMakePresets.json  Client.slnx  README.md
.github/workflows/: build_cmake_all.yml  release_packages.yml
cmake/: FindFreetypeFont.cmake  FindImGui.cmake  FindMiniz.cmake  FindMpg123.cmake  FindSDL3.cmake
docs/: ASSET_EXPLORER_PLAN.md  PORT_POSIX_CONTEXT.md  PORT_POSIX_PLAN.md  guia.md
src/Client/AssetExplorer/: AnimationPlayer.cpp  AnimationPlayer.h  AssetExplorerMainSDL.cpp  AssetIndex.cpp  AssetIndex.h  AssetType.cpp  AssetType.h  CMakeLists.txt  FlyCamera.cpp  FlyCamera.h  OrbitCamera.cpp  OrbitCamera.h
src/Client/JpegFile/: CMakeLists.txt  JpegFile.cpp  JpegFile.h
src/Client/KscViewer/: CMakeLists.txt  KscViewerCore.cpp  KscViewerCore.h  KscViewerMainSDL.cpp
src/Client/Launcher/: CMakeLists.txt  LauncherCore.cpp  LauncherCore.h  LauncherMainSDL.cpp  LauncherPatch.cpp  LauncherPatch.h
src/Client/Option/: CMakeLists.txt  OptionCore.cpp  OptionCore.h  OptionMainSDL.cpp
src/Client/WarFare/: APISocket.cpp  APISocket.h  CMakeLists.txt  ClientResourceFormatter.cpp  CursorDecoder.cpp  CursorDecoder.h  DungeonManager.cpp  GLLoader.cpp  GLLoader.h  GLTranslate.h  GameBase.cpp  GameBase.h  GameCursor.cpp  GameDef.h  GameEng.cpp  GameOptions.cpp  GameOptions.h  GameProcCharacterCreate.cpp  GameProcCharacterSelect.cpp  GameProcLogIn.h  GameProcLogIn_1098.cpp  GameProcLogIn_1098.h  GameProcLogIn_1298.cpp  GameProcLogIn_1298.h  GameProcMain.cpp  GameProcMain.h  GameProcNationSelect.cpp  GameProcedure.cpp  GameProcedure.h  Info.plist.in  LaunchOptionTool.h  LocalInput.cpp  LocalInput.h  LocalInputSDL.cpp  LocalInputSDL.h  N3FXMgr.cpp  N3Pond.cpp  N3River.cpp  N3Terrain.cpp  N3TerrainManager.cpp  (+48 more)
src/Client/WarFare/shaders/: ShaderBlobsSDLGPU.h  build_shaders.sh  uber_sdlgpu.frag  uber_sdlgpu.vert
src/FileIO/: CMakeLists.txt  FileReader.cpp  FileWriter.cpp  PathResolver.cpp  PathResolver.h
src/MathUtils/: Matrix44.h
src/N3Base/: AudioDecoderThread.cpp  AudioHandle.cpp  AudioHandle.h  CMakeLists.txt  DFont.cpp  DFont.h  LogWriter.cpp  My_3DStruct.cpp  My_3DStruct.h  N3AlphaPrimitiveManager.cpp  N3AlphaPrimitiveManager.h  N3AnimControl.h  N3Base.cpp  N3Base.h  N3BaseFileAccess.cpp  N3Base_client.vcxproj  N3Base_client.vcxproj.filters  N3Base_tool.vcxproj  N3Base_tool.vcxproj.filters  N3Camera.cpp  N3Chr.cpp  N3Chr.h  N3Cloak.cpp  N3Cloud.cpp  N3Cloud.h  N3Eng.cpp  N3EngTool.cpp  N3FXPMesh.cpp  N3FXPMeshInstance.cpp  N3FXPartBillBoard.cpp  N3FXPartBottomBoard.cpp  N3FXPartMesh.cpp  N3FXPartParticles.cpp  N3FXShape.cpp  N3GERain.cpp  N3GESnow.cpp  N3GlobalEffect.h  N3IMesh.cpp  N3Joint.cpp  N3Light.cpp  (+30 more)
src/N3Base/RHI/: RHIBuffers.h  RHIDevice.h  RHIDeviceD3D9.h  RHIDeviceNull.cpp  RHIDeviceNull.h  RHIStateKey.h  RHITextures.h
src/Platform/: CMakeLists.txt  D3D9Types.h  DInputKeyCodes.h  GameDataDir.h  IconDecoder.cpp  IconDecoder.h  PlatformCrypto.cpp  PlatformCrypto.h  PlatformEncoding.cpp  PlatformEncoding.h  PlatformFileFind.h  PlatformIni.h  PlatformPaths.h  PlatformString.h  PlatformTime.h  PlatformTypes.h  ProcessLaunch.h
src/Server/: PACKAGING_README.md
src/Server/Ebenezer/: EbenezerApp.cpp  OperationMessage.cpp  OperationMessage.h
src/Server/shared-server/: utilities.cpp
src/Tools/N3FXE/: Ground.cpp
src/Tools/N3ME/: DlgSetDTex.cpp  LyTerrain.cpp  PondMesh.cpp  QTNode.cpp  RiverMesh.cpp  RiverMng2.cpp
src/Tools/N3TexViewer/: N3TexViewerDoc.cpp
src/Tools/UIE/: TexViewer.cpp
src/shared/: ByteBuffer.cpp  JvCryption.cpp
tests/AssetExplorer/: AnimationPlayer_test.cpp  AssetIndex_test.cpp  AssetType_test.cpp  CMakeLists.txt  FlyCamera_test.cpp  OrbitCamera_test.cpp
tests/FileIO/: CMakeLists.txt  PathResolver_test.cpp
tests/KscViewer/: CMakeLists.txt  KscViewerCore_test.cpp
tests/Launcher/: CMakeLists.txt  LauncherCore_test.cpp  LauncherPatch_test.cpp
tests/N3Base/: CMakeLists.txt  DFontFT_test.cpp  DFontStub_test.cpp  N3TextureBmp_test.cpp  N3TextureTga_test.cpp  RHIBuffers_test.cpp  RHIDeviceNull_test.cpp  RHIStateKey_test.cpp  RHITexture_test.cpp  UIEditTextInput_test.cpp  VMeshHeadless_test.cpp
tests/Option/: CMakeLists.txt  OptionCore_test.cpp
tests/Platform/: CMakeLists.txt  GameDataDir_test.cpp  IconDecoder_test.cpp  PlatformCrypto_test.cpp  PlatformEncoding_test.cpp  PlatformIni_test.cpp  PlatformPaths_test.cpp  PlatformTime_test.cpp  ProcessLaunch_test.cpp
tests/WarFare/: APISocket_test.cpp  CMakeLists.txt  CursorDecoder_test.cpp  GLTranslate_test.cpp  NetworkEncoding_test.cpp  RHIDeviceSDLGPU_gpu_test.cpp  SDLGPUTranslate_test.cpp  ScancodeMap_test.cpp  TextResource_test.cpp
